[gd_scene load_steps=8 format=3 uid="uid://bin6va1btyxpn"]

[ext_resource type="Texture2D" uid="uid://351bdc0s545r" path="res://resources/sprites/personalfolder.png" id="1_vk3yy"]
[ext_resource type="Texture2D" uid="uid://wpvylbrgip3w" path="res://resources/sprites/folderopenpersonal.png" id="2_1kli8"]
[ext_resource type="Script" path="res://resources/scenes/personalworksmanager/scripts/personalworkscript.gd" id="3_oxt5l"]
[ext_resource type="FontFile" uid="uid://cpmmo07pbocsh" path="res://resources/fonts/Vermin Vibes 1989.ttf" id="4_32slq"]
[ext_resource type="AudioStream" uid="uid://cgus8vr1klb3n" path="res://resources/audio/open.sfxr" id="5_b76h4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dto36"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing = false

[sub_resource type="LabelSettings" id="LabelSettings_3stu5"]
font = ExtResource("4_32slq")
font_color = Color(0, 0, 0, 1)

[node name="personalworksfolder" type="TextureButton"]
anchors_preset = -1
anchor_right = 0.0347222
anchor_bottom = 0.0617283
pivot_offset = Vector2(20, 20)
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("1_vk3yy")
texture_pressed = ExtResource("1_vk3yy")
texture_hover = ExtResource("2_1kli8")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("3_oxt5l")
metadata/_edit_use_anchors_ = true

[node name="selected_panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.2
anchor_top = 1.025
anchor_right = 1.4
anchor_bottom = 1.325
offset_left = -17.0
offset_right = 7.0
offset_bottom = 24.0
theme_override_styles/panel = SubResource("StyleBoxFlat_dto36")
metadata/_edit_use_anchors_ = true

[node name="filename" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.99
anchor_right = 1.0
anchor_bottom = 1.215
offset_left = -9.0
offset_top = 5.4
offset_right = 7.0
offset_bottom = 31.4
grow_horizontal = 2
grow_vertical = 2
text = "Meus Projetos
"
label_settings = SubResource("LabelSettings_3stu5")
horizontal_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="select_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_b76h4")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
